Completed to-do list feature

--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@chakra-ui/icons": "^2.0.19",
     "@chakra-ui/react": "^2.2.1",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^14.1.0",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "firebase": "^9.22.2",
     "framer-motion": "^6.2.9",
     "react": "^18.2.0",
